<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_mainLabel"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/MainActivity_entertainment" />

                        <Button
                            android:id="@+id/btn_enterLotto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="setOnClick"
                            android:text="@string/MainActivity_entertainment_Lotto" />
                    </LinearLayout>
                </ScrollView>

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/MainActivity_Life" />

                        <Button
                            android:id="@+id/btn_lifeDutchPay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="setOnClick"
                            android:text="@string/MainActivity_Life_DutchPay" />
                    </LinearLayout>
                </ScrollView>

                <ScrollView
                    android:id="@+id/scrollView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="scrollView Test 3" />
                    </LinearLayout>
                </ScrollView>

                <ScrollView
                    android:id="@+id/scrollView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="scrollView Test 4" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/MainActivity_mainLable"
        android:textSize="60dp" />

</RelativeLayout>